@@ -1,0 +1,3 @@
+Source: blah
+VCS-Git: https://salsa.debian.org/blah.git
+VCS-Browser: https://salsa.debian.org/blah
