@@ -1,0 +1,3 @@
+Source: blah
+Vcs-Git: https://salsa.debian.org/blah.git
+Vcs-Browser: https://salsa.debian.org/blah
