@@ -2,6 +2,8 @@ lintian-brush (0.115) UNRELEASED; urgency=medium
 
   * Use dh_assistant for introspection of build systems.
   * deb-scrub-obsolete: Don't touch dependencies on debhelper.
+  * Support removing multiple instances of cute-field.
+    https://salsa.debian.org/jelmer/debian-janitor/-/issues/239
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 25 Sep 2021 09:26:08 +0100
 
